tests/single_instruction_translation_validation/mcsema/register-variants-samereg/bswap_r64/Output/test-lstate.out
/home/ubuntu/Install/llvm/llvm.4.0.0.install//bin/opt: test.mod.ll:178:22: error: use of undefined value '@my.bswap.i64'
  %5 = tail call i64 @my.bswap.i64(i64 %3)
                     ^
0.02user 0.02system 0:00.05elapsed 102%CPU (0avgtext+0avgdata 27220maxresident)k
0inputs+16outputs (0major+3268minor)pagefaults 0swaps
